@@ -3,7 +3,7 @@
    kernel/net/net_icmp.c
 
    Copyright (C) 2002 Dan Potter
-   Copyright (C) 2005, 2006, 2007 Lawrence Sebald
+   Copyright (C) 2005, 2006, 2007, 2009 Lawrence Sebald
 
  */
 
@@ -37,25 +37,24 @@ Message types that are not implemented yet (if ever):
 */
 
 struct __ping_pkt {
-	LIST_ENTRY(__ping_pkt) pkt_list;
-	uint8 ip[4];
-	uint8 *data;
-	int data_sz;
-	uint16 icmp_seq;
-	uint64 usec;
+    LIST_ENTRY(__ping_pkt) pkt_list;
+    uint8 ip[4];
+    uint8 *data;
+    int data_sz;
+    uint16 icmp_seq;
+    uint64 usec;
 };
 
 LIST_HEAD(__ping_pkt_list, __ping_pkt);
 
 static struct __ping_pkt_list pings = LIST_HEAD_INITIALIZER(0);
-static uint8 pktbuf[1514];
 static uint16 icmp_echo_seq = 1;
 
 static void icmp_default_echo_cb(const uint8 *ip, uint16 seq, uint64 delta_us,
                                  uint8 ttl, const uint8* data, int data_sz) {
-	printf("%d bytes from %d.%d.%d.%d: icmp_seq=%d ttl=%d time=%.2f ms\n",
-	       data_sz, ip[0], ip[1], ip[2], ip[3], seq, ttl,
-	       delta_us / 1000.0f);
+    printf("%d bytes from %d.%d.%d.%d: icmp_seq=%d ttl=%d time=%.3f ms\n",
+           data_sz, ip[0], ip[1], ip[2], ip[3], seq, ttl,
+           delta_us / 1000.0f);
 }
 
 /* The default echo (ping) callback */
@@ -64,157 +63,126 @@ net_echo_cb net_icmp_echo_cb = icmp_default_echo_cb;
 /* Handle Echo Reply (ICMP type 0) packets */
 static void net_icmp_input_0(netif_t *src, ip_hdr_t *ip, icmp_hdr_t *icmp,
                              const uint8 *d, int s) {
-	uint64 tmr;
-	struct __ping_pkt *ping;
-	uint16 seq;
+    uint64 tmr;
+    struct __ping_pkt *ping;
+    uint16 seq;
 
-	tmr = timer_us_gettime64();
+    tmr = timer_us_gettime64();
+    seq = (d[7] | (d[6] << 8));
 
-	LIST_FOREACH(ping, &pings, pkt_list) {
-		seq = (d[7] | (d[6] << 8));
-		if(ping->icmp_seq == seq) {
-			net_icmp_echo_cb((uint8 *)&ip->src, seq, 
-			                 tmr - ping->usec, ip->ttl, d, s);
+    LIST_FOREACH(ping, &pings, pkt_list) {
+        if(ping->icmp_seq == seq) {
+            net_icmp_echo_cb((uint8 *)&ip->src, seq, 
+                             tmr - ping->usec, ip->ttl, d, s);
 
-			LIST_REMOVE(ping, pkt_list);
-			free(ping->data);
-			free(ping);
+            LIST_REMOVE(ping, pkt_list);
+            free(ping->data);
+            free(ping);
 
-			return;
-		}
-	}
+            return;
+        }
+    }
 }
 
 /* Handle Echo (ICMP type 8) packets */
 static void net_icmp_input_8(netif_t *src, ip_hdr_t *ip, icmp_hdr_t *icmp,
                              const uint8 *d, int s) {
-	/* Set type to echo reply */
-	icmp->type = 0;
+    /* Set type to echo reply */
+    icmp->type = 0;
 
-	/* Set the destination to the original source, and substitute in our IP
-	   for the src (done this way so that pings that are broadcasted get an
-	   appropriate reply). */
-	ip->dest = ip->src;
-	ip->src = htonl(net_ipv4_address(src->ip_addr));
+    /* Recompute the ICMP header checksum */
+    icmp->checksum = 0;
+    icmp->checksum = net_ipv4_checksum((uint8 *)icmp, ntohs(ip->length) -
+                                       4 * (ip->version_ihl & 0x0f));
 
-	/* Recompute the IP header checksum */
-	ip->checksum = 0;
-	ip->checksum = net_ipv4_checksum((uint8 *)ip,
-	                                 4 * (ip->version_ihl & 0x0f));
-
-	/* Recompute the ICMP header checksum */
-	icmp->checksum = 0;
-	icmp->checksum = net_ipv4_checksum((uint8 *)icmp, ntohs(ip->length) -
-	                                   4 * (ip->version_ihl & 0x0f));
-
-	/* Send it */
-	memcpy(pktbuf, ip, 20);
-	memcpy(pktbuf + 20, d, ntohs(ip->length) - 4 * (ip->version_ihl & 0x0F));
-	net_ipv4_send_packet(src, ip, pktbuf + 20, ntohs(ip->length) -
-	                     4 * (ip->version_ihl & 0x0F));
+    /* Set the destination to the original source, and substitute in our IP
+       for the src (done this way so that pings that are broadcasted get an
+       appropriate reply), and send it away. */
+    net_ipv4_send(src, d, s, ip->packet_id, ip->ttl, 1, ip->dest, ip->src);
 }
 
 int net_icmp_input(netif_t *src, ip_hdr_t *ip, const uint8 *d, int s) {
-	icmp_hdr_t *icmp;
-	int i;
+    icmp_hdr_t *icmp;
+    int i;
 
-	/* Find ICMP header */
-	icmp = (icmp_hdr_t*) d;
+    /* Find ICMP header */
+    icmp = (icmp_hdr_t*)d;
 
-	/* Check icmp checksum */
-	memset(pktbuf, 0, 1514);
-	i = icmp->checksum;
-	icmp->checksum = 0;
-	memcpy(pktbuf, icmp, ntohs(ip->length) - 4 * (ip->version_ihl & 0x0f));
-	icmp->checksum = net_ipv4_checksum(pktbuf, (ntohs(ip->length) + 1)  -
-	                                   4 * (ip->version_ihl & 0x0f));
+    /* Check the ICMP checksum */
+    i = net_ipv4_checksum(d, s);
 
-	if (i != icmp->checksum) {
-		dbglog(DBG_KDEBUG, "net_icmp: icmp with invalid checksum\n");
-		return -1;
-	}
+    if (i) {
+        dbglog(DBG_KDEBUG, "net_icmp: icmp with invalid checksum\n");
+        return -1;
+    }
 
-	switch(icmp->type) {
-		case 0: /* Echo reply */
-			net_icmp_input_0(src, ip, icmp, d, s);
-			break;
-		case 3: /* Destination unreachable */
-			dbglog(DBG_KDEBUG, "net_icmp: Destination unreachable,"
-			       " code %d\n", icmp->code);
-			break;
+    switch(icmp->type) {
+        case 0: /* Echo reply */
+            net_icmp_input_0(src, ip, icmp, d, s);
+            break;
 
-		case 8: /* Echo */
-			net_icmp_input_8(src, ip, icmp, d, s);
-			break;
+        case 3: /* Destination unreachable */
+            dbglog(DBG_KDEBUG, "net_icmp: Destination unreachable,"
+                   " code %d\n", icmp->code);
+            break;
 
-		default:
-			dbglog(DBG_KDEBUG, "net_icmp: unknown icmp type: %d\n",
-			       icmp->type);
-	}
+        case 8: /* Echo */
+            net_icmp_input_8(src, ip, icmp, d, s);
+            break;
 
-	return 0;
+        default:
+            dbglog(DBG_KDEBUG, "net_icmp: unknown icmp type: %d\n",
+                   icmp->type);
+    }
+
+    return 0;
 }
 
 /* Send an ICMP Echo (PING) packet to the specified device */
 int net_icmp_send_echo(netif_t *net, const uint8 ipaddr[4], const uint8 *data,
                        int size) {
-	icmp_hdr_t *icmp;
-	ip_hdr_t ip;
-	struct __ping_pkt *newping;
-	int r = -1;
-	uint8 databuf[sizeof(icmp_hdr_t) + size];
+    icmp_hdr_t *icmp;
+    struct __ping_pkt *newping;
+    int r = -1;
+    uint8 databuf[sizeof(icmp_hdr_t) + size];
+    uint16 seq = icmp_echo_seq++;
+    uint32 src;
 
-	icmp = (icmp_hdr_t *)databuf;
+    icmp = (icmp_hdr_t *)databuf;
 
-	/* Fill in the ICMP Header */
-	icmp->type = 8; /* Echo */
-	icmp->code = 0;
-	icmp->checksum = 0;
-	icmp->misc[0] = (uint8) 'D';
-	icmp->misc[1] = (uint8) 'C';
-	icmp->misc[2] = (uint8) (icmp_echo_seq >> 8);
-	icmp->misc[3] = (uint8) (icmp_echo_seq & 0xFF);
-	memcpy(databuf + sizeof(icmp_hdr_t), data, size);
+    /* Fill in the ICMP Header */
+    icmp->type = 8; /* Echo */
+    icmp->code = 0;
+    icmp->checksum = 0;
+    icmp->misc[0] = (uint8) 'D';
+    icmp->misc[1] = (uint8) 'C';
+    icmp->misc[2] = (uint8) (seq >> 8);
+    icmp->misc[3] = (uint8) (seq & 0xFF);
+    memcpy(databuf + sizeof(icmp_hdr_t), data, size);
 
-	/* Fill in the IP Header */
-	ip.version_ihl = 0x45; /* 20 byte header, ipv4 */
-	ip.tos = 0;
-	ip.length = htons(sizeof(icmp_hdr_t) + size + 20);
-	ip.packet_id = 0;
-	ip.flags_frag_offs = 0x0040;
-	ip.ttl = 64;
-	ip.protocol = 1; /* ICMP */
-	ip.checksum = 0;
+    /* Compute the ICMP Checksum */
+    icmp->checksum = net_ipv4_checksum(databuf, sizeof(icmp_hdr_t) + size);
 
-	if(net_ipv4_address(ipaddr) == 0x7F000001)
-		ip.src = htonl(net_ipv4_address(ipaddr));
-	else
-		ip.src = htonl(net_ipv4_address(net->ip_addr));
+    /* If we're sending to the loopback, set that as our source too. */
+    if(ipaddr[0] == 127) {
+        src = net_ipv4_address(ipaddr);
+    }
+    else {
+        src = net_ipv4_address(net->ip_addr);
+    }
 
-	ip.dest = htonl(net_ipv4_address(ipaddr));
+    newping = (struct __ping_pkt*) malloc(sizeof(struct __ping_pkt));
+    newping->data = (uint8 *)malloc(size);
+    newping->data_sz = size;
+    newping->icmp_seq = seq;
+    memcpy(newping->data, data, size);
+    memcpy(newping->ip, ipaddr, 4);
+    LIST_INSERT_HEAD(&pings, newping, pkt_list);
 
-	/* Compute the ICMP Checksum */
-	icmp->checksum = net_ipv4_checksum(databuf, sizeof(icmp_hdr_t) + size);
+    newping->usec = timer_us_gettime64();
+    r = net_ipv4_send(net, databuf, sizeof(icmp_hdr_t) + size, seq, 64, 1,
+                      htonl(src),
+                      htonl(net_ipv4_address(ipaddr)));
 
-	/* Compute the IP Checksum */
-	ip.checksum = net_ipv4_checksum((uint8 *)&ip, sizeof(ip_hdr_t));
-
-	newping = (struct __ping_pkt*) malloc(sizeof(struct __ping_pkt));
-	newping->data = (uint8 *)malloc(size);
-	newping->data_sz = size;
-	newping->icmp_seq = icmp_echo_seq;
-	memcpy(newping->data, data, size);
-	memcpy(newping->ip, ipaddr, 4);
-	LIST_INSERT_HEAD(&pings, newping, pkt_list);
-
-	++icmp_echo_seq;
-
-	while(r == -1)	{
-		newping->usec = timer_us_gettime64();
-		r = net_ipv4_send_packet(net, &ip, databuf,
-		                         sizeof(icmp_hdr_t) + size);
-		thd_sleep(10);
-	}
-
-	return 0;
+    return r;
 }
